fixed header z-index

--- a/styleSheets/indexStyles.css
+++ b/styleSheets/indexStyles.css
@@ -108,7 +108,7 @@ span {
 	position: fixed;
 	top: 30px;
 	left: 30px;
-	z-index: 2;
+	z-index: 3;
 	transition: all .3s ease-in-out;
 	/*transition: color .2s ease-in-out;*/
 	animation: homeLoad 3s linear;
@@ -273,7 +273,7 @@ span {
 	top: 0;
 	right: 0;
 	width: 100%;
-	z-index: 1;
+	z-index: 2;
 	transition: all .2s ease-in-out;
 }
 .header.scrolled {
@@ -507,6 +507,7 @@ a svg:hover .linkedIn {
 	top: 59px;
 	left: 0;
 	font-size: 12px;
+	z-index: 0;
 }
 .aboutCont {
 	position: absolute;
@@ -552,7 +553,7 @@ a svg:hover .linkedIn {
 	position: absolute;
 	top: 80%;
 	left: 50%;
-	z-index: 2;
+	z-index: 0;
 	transform: translate(-50%, -50%);
 }
 .next:hover, .skillToggle:hover {
@@ -591,7 +592,7 @@ a svg:hover .linkedIn {
 	width: 100%;
 	background-color: rgba(38, 38, 38, 0);
 	transition: all 0.3s ease-in-out;
-	z-index: 666;
+	z-index: 0;
 }
 .iframeCover:hover {
 	background-color: rgba(38, 38, 38, 0.8);
@@ -639,6 +640,7 @@ a svg:hover .linkedIn {
 .overviewCont {
 	padding: 20px;
 	text-align: center;
+	z-index: 0;
 }
 .workHead {
 	font-size: 80px;
